Add autosign and dns_alt_names parameters

--- a/templates/puppet.conf.main.erb
+++ b/templates/puppet.conf.main.erb
@@ -19,3 +19,6 @@
   <%- else -%>
   server        = puppet
   <%- end -%>
+  <%- if @dns_alt_names -%>
+  dns_alt_names = <%= @dns_alt_names_str %>
+  <%- end -%>
